[workspace]
members = [
    "api",
    "integration_tests", 
    "lib/dao",
    "lib/parser",
    "lib/migration",
    "lib/persist"
]

[package]
name = "photon"
version = "0.1.0"
edition = "2021"
authors = ["Helius Labs"]
homepage = "https://helius.dev"
license = "Apache-2.0"
keywords = ["solana", "photon"]

resolver = "2"

[workspace.dependencies]
anyhow = "1.0.79"
async-trait = "0.1.53"
base64 = "0.21.0"
borsh = "0.10.3"
bs58 = "0.4.0"
env_logger = "0.10.0"
hyper = "0.14.23"
insta = {version = "1.34.0", features = ["json"]}
jsonrpsee = {version = "0.16.2", features = ["server", "macros"]}
jsonrpsee-core = {version = "0.16.2", features = ["server"]}
log = "0.4.17"
lazy_static = "1.4.0"
light-poseidon = "0.2.0"
open-rpc-derive = {version = "0.0.4"}
open-rpc-schema = {version = "0.0.4"}
schemars = {version = "0.8.6", features = ["chrono"]}
schemars_derive = "0.8.6"
sea-orm = {version = "0.10.6", features = [
  "macros",
  "runtime-tokio-rustls",
  "sqlx-postgres",
  "with-chrono",
  "mock",
]}
serde_json = "1.0.82"
serde = "1.0.140"
solana-sdk = "=1.17.18"
sqlx = {version = "0.6.2", features = [
  "macros",
  "runtime-tokio-rustls",
  "postgres",
  "uuid",
  "offline",
  "json",
]}
thiserror = "1.0.31"
tokio = {version = "1.23.0", features = ["full"]}
tower = {version = "0.4.13", features = ["full"]}
tower-http = {version = "0.3.5", features = ["full"]}
tracing = "0.1.35"
tracing-subscriber = {version = "0.3.16", features = [
  "json",
  "env-filter",
  "ansi",
]}
