[package]
default-run = "main"
description = "Photon: a compressed transaction Solana indexer"
edition = "2021"
license = "Apache-2.0"
name = "photon"
publish = true
readme = "README.md"
repository = "https://github.com/helius-labs/photon"
version = "0.1.0"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "migration"
path = "src/migration/main.rs"

[dependencies]
anyhow = "1.0.79"
async-std = {version = "1", features = ["attributes", "tokio1"]}
async-trait = "0.1.53"
base64 = "0.21.0"
borsh = "0.10.3"
bs58 = "0.4.0"
cadence-macros = "1.2.0"
clap = {"version" = "4.5.2", features = ["derive"]}
env_logger = "0.10.0"
futures = "0.3.30"
hyper = "0.14.23"
insta = {version = "1.34.0", features = ["json"]}
itertools = "0.12.1"
jsonrpsee = {version = "0.16.2", features = ["server", "macros"]}
jsonrpsee-core = {version = "0.16.2", features = ["server"]}
lazy_static = "1.4.0"
light-merkle-tree-event = {git = "https://github.com/Lightprotocol/light-protocol.git", branch = "emit-indexable-for-photon"}
light-poseidon = "0.2.0"
log = "0.4.17"
once_cell = "1.19.0"
open-rpc-derive = {version = "0.0.4"}
open-rpc-schema = {version = "0.0.4"}
psp-compressed-pda = {git = "https://github.com/Lightprotocol/light-protocol.git", branch = "emit-indexable-for-photon"}
psp-compressed-token = {git = "https://github.com/Lightprotocol/light-protocol.git", branch = "emit-indexable-for-photon"}
rstest = "0.18.2"
schemars = {version = "0.8.6", features = ["chrono"]}
schemars_derive = "0.8.6"
sea-orm = {version = "0.10.6", features = [
  "macros",
  "runtime-tokio-rustls",
  "sqlx-postgres",
  "sqlx-sqlite",
  "with-chrono",
  "mock",
]}
sea-orm-migration = {version = "0.10.6", features = [
  "runtime-tokio-rustls",
  "sqlx-postgres",
]}
serde = "1.0.140"
serde_json = "1.0.82"
solana-client = "=1.17"
solana-program = "=1.17"
solana-sdk = "=1.17"
solana-transaction-status = "=1.17"
sqlx = {version = "0.6.2", features = [
  "macros",
  "runtime-tokio-rustls",
  "postgres",
  "sqlite",
  "uuid",
  "offline",
  "json",
]}
thiserror = "1.0.31"
tokio = {version = "1.23.0", features = ["full"]}
tower = {version = "0.4.13", features = ["full"]}
tower-http = {version = "0.3.5", features = ["full"]}
tracing = "0.1.35"
tracing-subscriber = {version = "0.3.16", features = [
  "json",
  "env-filter",
  "ansi",
]}

[dev-dependencies]
function_name = "0.3.0"
serial_test = "2.0.0"
