[package]
default-run = "photon"
description = "Solana indexer for general compression"
edition = "2021"
license = "Apache-2.0"
name = "photon-indexer"
publish = true
readme = "README.md"
repository = "https://github.com/helius-labs/photon"
version = "0.51.1"

[[bin]]
name = "photon"
path = "src/main.rs"

[[bin]]
name = "photon-migration"
path = "src/migration/main.rs"

[[bin]]
name = "photon-openapi"
path = "src/openapi/main.rs"

[[bin]]
name = "photon-snapshotter"
path = "src/snapshot/snapshotter/main.rs"

[[bin]]
name = "photon-snapshot-loader"
path = "src/snapshot/loader/main.rs"

[[bin]]
name = "photon-tree-validator"
path = "src/tools/tree_validator/main.rs"

[dependencies]
ark-serialize = "0.5"
ark-bn254 = "0.5"

anyhow = "1.0.79"
async-std = { version = "1", features = ["attributes", "tokio1"] }
async-trait = "0.1.85"
base64 = "0.21.0"
borsh = "0.10.3"
borsh1 = { package = "borsh", version = "1.5" }
bs58 = "0.4.0"
byteorder = "1.5.0"
cadence-macros = "1.2.0"
clap = { "version" = "4.5.2", features = ["derive"] }
dirs = "5.0.1"
futures = "0.3.30"
hyper = "0.14.23"
insta = { version = "1.34.0", features = ["json"] }
itertools = "0.12.1"
jsonrpsee = { version = "0.16.2", features = ["server", "macros"] }
jsonrpsee-core = { version = "0.16.2", features = ["server"] }
lazy_static = "1.4.0"
log = "0.4.17"
once_cell = "1.19.0"
rstest = "0.18.2"
sea-orm = { version = "0.10.6", features = [
    "macros",
    "runtime-tokio-rustls",
    "sqlx-postgres",
    "sqlx-sqlite",
    "with-chrono",
    "mock",
] }
bytes = "1.7.1"
sea-orm-migration = { version = "0.10.6", features = [
    "runtime-tokio-rustls",
    "sqlx-postgres",
] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.82"

solana-client = "3.0.8"
solana-pubkey = { version = "3.0.0", features = ["serde", "borsh"] }
solana-signature = "3.1.0"
solana-account = "3.2.0"
solana-clock = "3.0.0"
solana-transaction = "3.0.1"
solana-bn254 = "3.1.2"
solana-commitment-config = "3.0.0"

solana-transaction-status = "3.0.8"

light-zero-copy = { version = "0.5",default-features = false}
light-concurrent-merkle-tree = {version = "4", default-features = false }
light-batched-merkle-tree = { version = "0.6", default-features = false}
light-merkle-tree-metadata = { version = "0.6", default-features = false }
light-compressed-account = { version = "0.6", default-features = false }
light-hasher = { version = "5", features = ["poseidon", "keccak", "sha256"], default-features = false}
light-poseidon = "0.3.0"
light-indexed-merkle-tree = { version = "4", default-features = false }
light-event = "0.1"

sqlx = { version = "0.6.2", features = [
    "macros",
    "runtime-tokio-rustls",
    "postgres",
    "sqlite",
    "uuid",
    "offline",
    "json",
] }
thiserror = "1.0.31"
# time pinned because of https://github.com/launchbadge/sqlx/issues/3189
hex = "0.4.3"
num-bigint = "0.4.4"
num-traits = "0.2.18"
num_enum = "0.7.2"
reqwest = { version = "0.12.4", features = ["stream"] }
tokio = { version = "1.43.0", features = ["full"] }
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.3.5", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.16", features = [
    "json",
    "env-filter",
    "ansi",
] }
utoipa = { version = "4.2.0", features = [
    "yaml",
    "chrono",
    "non_strict_integers",
] }
yellowstone-grpc-client = "10.1.1"
yellowstone-grpc-proto = "10.1.1"
cadence = "1.4.0"
async-stream = "0.3.5"
rand = "0.8.5"
bincode = "1.3.3"
rust-s3 = "0.34.0"
cloud-storage = "0.11.1"

[dev-dependencies]
function_name = "0.3.0"
serial_test = "2.0.0"
light-merkle-tree-reference = "4"

[profile.dev]
# Do not produce debug info for ~40% faster incremental compilation.
debug = 0
# Some standard library files already come precompiled with debuginfo. We strip it for faster linking
# and smaller binaries.
strip = "debuginfo"
