[package]
edition = "2021"
name = "api"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = {workspace = true}
async-trait = {workspace = true}
base64 = {workspace = true}
bs58 = {workspace = true}
dao = {workspace = true}
env_logger = {workspace = true}
hyper = {workspace = true}
jsonrpsee = {workspace = true}
jsonrpsee-core = {workspace = true}
log = {workspace = true}
schemars = {workspace = true}
schemars_derive = {workspace = true}
sea-orm = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
solana-sdk = {workspace = true}
sqlx = {workspace = true}
thiserror = {workspace = true}
tokio = {workspace = true}
tower = {workspace = true}
tower-http = {workspace = true}
tracing = {workspace = true}
tracing-subscriber = {workspace = true}
