[package]
edition = "2021"
name = "dao"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bs58 = {workspace = true}
schemars = {workspace = true}
sea-orm = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
solana-sdk = {workspace = true}
thiserror = {workspace = true}
