[package]
edition = "2021"
name = "ingester"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
account-compression = {workspace = true}
anyhow = {workspace = true}
borsh = {workspace = true}
bs58 = {workspace = true}
dao = {workspace = true}
futures = {workspace = true}
lazy_static = {workspace = true}
light-verifier-sdk = {workspace = true}
log = {workspace = true}
psp-compressed-token = {workspace = true}
sea-orm = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
solana-client = {workspace = true}
solana-program = {workspace = true}
solana-sdk = {workspace = true}
solana-transaction-status = {workspace = true}
sqlx = {workspace = true}
thiserror = {workspace = true}
tracing = {workspace = true}
tracing-subscriber = {workspace = true}
