[package]
edition = "2021"
name = "integration_tests"
publish = false
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
anyhow = {workspace = true}
api = {workspace = true}
base64 = {workspace = true}
borsh = {workspace = true}
bs58 = {workspace = true}
dao = {workspace = true}
function_name = {workspace = true}
ingester = {workspace = true}
itertools = {workspace = true}
lazy_static = {workspace = true}
light-poseidon = {workspace = true}
log = {workspace = true}
migration = {workspace = true}
once_cell = {workspace = true}
sea-orm = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
serial_test = {workspace = true}
solana-client = {workspace = true}
solana-sdk = {workspace = true}
solana-transaction-status = {workspace = true}
sqlx = {workspace = true}
thiserror = {workspace = true}
tokio = {workspace = true}
tracing = {workspace = true}
tracing-subscriber = {workspace = true}
