[package]
description = "Photon: a compressed transaction Solana indexer"
edition = "2021"
license = "Apache-2.0"
name = "photon"
publish = true
readme = "../README.md"
repository = "https://github.com/helius-labs/photon"
version = "0.1.0"

[dependencies]
api = {workspace = true}
clap = {workspace = true}
futures = {workspace = true}
ingester = {workspace = true}
jsonrpsee = {workspace = true}
log = {workspace = true}
migration = {workspace = true}
solana-client = {workspace = true}
sqlx = {workspace = true}
tokio = {workspace = true}
tracing-subscriber = {workspace = true}
