[package]
name = "persist"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
borsh = { workspace = true }
bs58 = { workspace = true }
dao = { path = "../dao" }
lazy_static = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
solana-sdk = { workspace = true }
parser = { path = "../parser" }
sea-orm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
